--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,8 @@ jobs:
           curl -L https://foundry.paradigm.xyz | bash
           # Add foundry binaries to PATH for subsequent steps
           echo "$HOME/.foundry/bin" >> $GITHUB_PATH
-          # Ensure foundryup is available and upgrade/install toolchain
-          foundryup -y
+          # Call foundryup directly from the installed location so it's available in this step
+          $HOME/.foundry/bin/foundryup -y
 
       - name: Install npm deps if present
         run: |
